# crew-try

./: README.md  crewai_flow.html  news.md  pyproject.toml
src/crew_try/: __init__.py  main.py
src/crew_try/crews/research_crew/: research_crew.py
src/crew_try/crews/research_crew/config/: agents.yaml  tasks.yaml
